<resources>
    <string name="app_name">PhotoShare</string>
    <string name="places_api_key" translatable="false">AIzaSyDbEvxm-4H0Vg4DWwKxZS02-_SQcCReEv0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="myEvents">My Events</string>
    <string name="participants">Participants</string>
    <string name="avatar">Avatar</string>
    <string name="editAvatar">Edit avatar</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enterPin">Enter Pin:</string>
    <string name="join">Join</string>
    <string name="pin">Password</string>
    <string name="this_is_a_private_event_please_enter_pin_to_join">This is a private event, please enter password to join:</string>
    <string name="cancel">Cancel</string>
    <string name="private_event">Private Event</string>
    <string name="sign_out">Sign Out</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="done">DONE</string>
    <string name="more">More</string>
    <string name="choose_avatar">Choose Avatar:</string>
    <string name="add_participant">Add Participant</string>
    <string name="add_admin">Add Admin</string>
    <string name="delete_event">Delete Event</string>
    <string name="leave_event">Leave Event</string>
    <string name="more_menu">More menu</string>
    <string name="download">Download</string>
    <string name="ad_photo">Add photo</string>
    <string name="remove_participant">Remove Participant</string>
    <string name="remove_admin">Remove Admin</string>
    <string name="confirm">Confirm</string>
    <string name="email">Email</string>
    <string name="please_insert_email_address">Please insert email address:</string>
    <string name="discover">Discover</string>
    <string name="dashboard">Dashboard</string>
    <string name="near_me">Near Me</string>
    <string name="welcome">Welcome!</string>
    <string name="click_to_sign_up_or_sign_in_with_google">Click to sign up or sign in with Google</string>
    <string name="developed_by_hala_and_ola">Developed by Hala and Ola</string>
    <string name="your_crowd_sourced_album">Your crowd sourced album</string>
    <string name="share">Share</string>
    <string name="photo">Photo</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="hello_i_am_a_dialog">Hello I am a dialog!</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_event_description">Enter event description...</string>
    <string name="confirm_c">CONFIRM</string>
    <string name="submit">submit</string>
</resources>
