<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SplashActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                style="@style/Headline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                style="@style/Headline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                android:textColor="@color/accentColor"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            style="@style/Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_crowd_sourced_album"
            android:textColor="@color/accentColor" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/developed_by_hala_and_ola" />

</RelativeLayout>