<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/join_event_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".EventPage">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:id="@+id/event_page_dialog_enter_email"
        style="@style/Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_insert_email_address" />

    <EditText
        android:id="@+id/event_page_dialog_email"
        style="@style/Body1"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:autofillHints="@string/email"
        android:gravity="center"
        android:inputType="textEmailAddress" />

<!--    <Space-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="10dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/event_page_dialog_errors"-->
<!--        style="@style/Body2"-->
<!--        android:textColor="@color/redColor"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="start" />-->

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/event_page_dialog_confirm_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor"
            android:gravity="center"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/event_page_dialog_cancel_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor"
            android:gravity="center"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>