<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/titleId"
            style="@style/Subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title" />

        <LinearLayout
            android:id="@+id/event_in_dash_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleId"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_access_time_black_24dp" />

            <TextView
                android:id="@+id/timeId"
                style="@style/Overline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/event_in_dash_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_in_dash_time"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_date_range_black_24dp" />

            <TextView
                android:id="@+id/dateId"
                style="@style/Overline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/event_in_dash_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_in_dash_date"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_location_on_black_24dp" />

            <TextView
                android:id="@+id/locationId"
                style="@style/Overline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location" />

        </LinearLayout>

        <TextView
            android:id="@+id/descriptionId"
            style="@style/Body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/event_in_dash_location"
            android:layout_marginTop="8dp"
            android:text="@string/description"
            android:textStyle="italic" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>